--- a/_posts/2016-06-25-test.markdown
+++ b/_posts/2016-06-25-test.markdown
@@ -1,43 +1,72 @@
 ---
 layout:     post
-title:      "test"
+title:      "sandbox的设计与开发"
 date:       2016-06-25 12:00:00
-author:     "Start Bootstrap"
+author:     "virusdefender"
 header-img: "img/post-bg-05.jpg"
 ---
 
-<p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals. The airman's earth, if free men make it, will be truly round: a globe in practice, not in theory.</p>
 
-<p>Science cuts two ways, of course; its products can be used for both good and evil. But there's no turning back from science. The early warnings about technological dangers also come from science.</p>
+标题
+--
 
-<p>What was most significant about the lunar voyage was not that man set foot on the Moon but that they set eye on the earth.</p>
+标题
+==
 
-<p>A Chinese tale tells of some men sent to harm a young girl who, upon seeing her beauty, become her protectors rather than her violators. That's how I felt seeing the Earth for the first time. I could not help but love and cherish her.</p>
+  - list
+  - list
+  - list
 
-<p>For those who have seen the Earth from space, and for the hundreds and perhaps thousands more who will, the experience most certainly changes your perspective. The things that we share in our world are far more valuable than those which divide us.</p>
+  
+```python
+class AbstractProblem(models.Model):
+    # 标题
+    title = models.CharField(max_length=50)
+    # 问题描述 HTML 格式
+    description = RichTextField()
+    # 输入描述
+    input_description = models.CharField(max_length=10000)
+    # 输出描述
+    output_description = models.CharField(max_length=10000)
+    # 样例输入 可能会存储 json 格式的数据
+    samples = models.TextField(blank=True)
+    # 测试用例id 这个id 可以用来拼接得到测试用例的文件存储位置
+    test_case_id = models.CharField(max_length=40)
+    # 提示
+    hint = RichTextField(blank=True, null=True)
+    # 创建时间
+    create_time = models.DateTimeField(auto_now_add=True)
+    # 最后更新时间，不适用auto_now，因为本 model 里面的提交数量是变化的，导致每次 last_update_time 也更新了
+    # 需要每次编辑后手动赋值
+    last_update_time = models.DateTimeField(blank=True, null=True)
+    # 这个题是谁创建的
+    created_by = models.ForeignKey(User)
+    # 时间限制 单位是毫秒
+    time_limit = models.IntegerField()
+    # 内存限制 单位是MB
+    memory_limit = models.IntegerField()
+    # special judge
+    spj = models.BooleanField(default=False)
+    spj_language = models.IntegerField(blank=True, null=True)
+    spj_code = models.TextField(blank=True, null=True)
+    spj_version = models.CharField(max_length=32, blank=True, null=True)
+    # 是否可见 false的话相当于删除
+    visible = models.BooleanField(default=True)
+    # 总共提交数量
+    total_submit_number = models.IntegerField(default=0)
+    # 通过数量
+    total_accepted_number = models.IntegerField(default=0)
 
-<h2 class="section-heading">The Final Frontier</h2>
+    class Meta:
+        db_table = "problem"
+        abstract = True
 
-<p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a task to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.</p>
+    def add_submission_number(self):
+        self.total_submit_number += 1
+        self.save(update_fields=["total_submit_number"])
 
-<p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a task to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.</p>
-
-<blockquote>The dreams of yesterday are the hopes of today and the reality of tomorrow. Science has not yet mastered prophecy. We predict too much for the next year and yet far too little for the next ten.</blockquote>
-
-<p>Spaceflights cannot be stopped. This is not the work of any one man or even a group of men. It is a historical process which mankind is carrying out in accordance with the natural laws of human development.</p>
-
-<h2 class="section-heading">Reaching for the Stars</h2>
-
-<p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this has to change a man.</p>
-
-<a href="#">
-    <img src="{{ site.baseurl }}/img/post-sample-image.jpg" alt="Post Sample Image">
-</a>
-<span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>
-
-<p>Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no man has gone before.</p>
-
-<p>As I stand out here in the wonders of the unknown at Hadley, I sort of realize there’s a fundamental truth to our nature, Man must explore, and this is exploration at its greatest.</p>
-
-<p>Placeholder text by <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>.</p>
+    def add_ac_number(self):
+        self.total_accepted_number += 1
+        self.save(update_fields=["total_accepted_number"])
+```
 
